--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple json database to deploy to the host of your choice",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "watch": "json-server --watch db.json"
   },
   "keywords": [
     "json-server,heroku, node, REST API"
